<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Assign_submit">

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_assignment"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="35dp"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="66dp" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_file"
        android:textSize="15dp"
        android:texzztColor="@color/design_default_color_on_secondary"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="319dp" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="397dp" />
</androidx.constraintlayout.widget.ConstraintLayout>